<resources>
    <string name="app_name">BuyEasy</string>
    <string name="daily_necessities">日常用品</string>
    <string name="click_to_search">点击搜索</string>
    <string name="price_order">价格排序</string>
    <string name="show_list">列表展示</string>
    <string name="show_grid">网格展示</string>
    <string name="buy">购买</string>
    <string name="zfb_pay">支付宝支付</string>
    <string name="arrive_pay">货到付款</string>
    <string name="receiver">收货人：</string>
    <string name="phone">手机号：</string>
    <string name="address">收货地址：</string>
    <string name="carry_fee">跑腿费：</string>
    <string name="total">总计：</string>
    <string name="cancel">取消订单</string>
    <string name="pay_confirm">确认支付</string>
    <string name="set_to_default">设为默认</string>
</resources>