<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PayActivity">

        <com.example.buyeasy.view.TitleView
            android:id="@+id/pay_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/pay_method_rg"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/pay_zfb_rb"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="true"
                android:padding="20dp"
                android:text="@string/zfb_pay" />

            <RadioButton
                android:id="@+id/pay_arrive_rb"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="20dp"
                android:text="@string/arrive_pay" />

        </RadioGroup>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/pay_receiver_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiver"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/pay_receiver_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/pay_receiver_tv"
                android:layout_toEndOf="@id/pay_receiver_tv"
                android:background="@null"
                android:enabled="false" />

            <TextView
                android:id="@+id/pay_phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pay_receiver_tv"
                android:layout_marginTop="20dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/pay_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pay_receiver_et"
                android:layout_alignBaseline="@id/pay_phone_tv"
                android:layout_alignStart="@id/pay_receiver_et"
                android:layout_toEndOf="@id/pay_phone_tv"
                android:background="@null"
                android:enabled="false" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#DCDCDC" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/pay_address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/pay_address_edit_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:onClick="onClick"
                android:src="@mipmap/icon_write" />

            <EditText
                android:id="@+id/pay_address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/pay_address_tv"
                android:layout_toStartOf="@id/pay_address_edit_iv"
                android:layout_toEndOf="@id/pay_address_tv"
                android:background="@null"
                android:enabled="false" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/pay_carry_fee_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carry_fee"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/pay_carry_fee_et"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/pay_carry_fee_tv"
                android:layout_toEndOf="@id/pay_carry_fee_tv"
                android:background="@null"
                android:enabled="false" />

            <TextView
                android:id="@+id/pay_total_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/pay_carry_fee_et"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/pay_total_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/pay_total_tv"
                android:layout_toEndOf="@id/pay_total_tv"
                android:background="@null"
                android:enabled="false" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="30dp">

            <Button
                android:id="@+id/pay_cancel_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_buy_background"
                android:onClick="onClick"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pay_confirm_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_buy_background"
                android:onClick="onClick"
                android:text="@string/pay_confirm"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</layout>
